--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,11 @@ dependencies {
 	compile('ch.qos.logback:logback-core:1.1.2')
 	compile('org.slf4j:slf4j-api:1.7.6')
 	compile 'org.codehaus.janino:janino:2.7.7'
+	
+	//fileupload
+	 compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
 }
 
 
