--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,5 @@ config: classpath:logback.xml
 logging.level.logger: INFO
 # logging.level.logger.Test: TRACE
 
-multipart.maxFileSiz=10MB
+multipart.maxFileSize=10MB
 multipart.maxRequestSize=10MB
-
