--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,6 @@ config: classpath:logback.xml
 
 logging.level.logger: INFO
 # logging.level.logger.Test: TRACE
-
+spring.http.multipart.enabled=True
 multipart.maxFileSize=10MB
 multipart.maxRequestSize=10MB
