--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/java/com/sting/security/SecConfig.java=UTF-8
 encoding//src/main/java/com/sting/service/UserAuthService.java=UTF-8
+encoding//src/main/webapp/WEB-INF/views/signup/signupIntro.jsp=UTF-8
 encoding/<project>=UTF-8
