--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,10 @@ logging.level.logger: INFO
 spring.http.multipart.enabled=True
 multipart.maxFileSize=10MB
 multipart.maxRequestSize=10MB
+
+
+#mail
+spring.mail.host=smtp.naver.com
+spring.mail.port= 465
+spring.mail.username= ideaconert
+spring.mail.password= ekfdyd0613!@#
